--- a/university_student_computer_design_competition_website/FrontEnd/package.json
+++ b/university_student_computer_design_competition_website/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.24.0",
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
+    "less-loader": "^7.3.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -19,6 +20,7 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "babel-plugin-component": "^1.1.1",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
