--- a/.gitignore
+++ b/.gitignore
@@ -20,7 +20,7 @@
 *.rar
 
 # 其他文件
-other.pj
+*.other
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
