解决多次加载mounted的问题
设计并完成用户管理页面；

解决多次加载mounted的问题（tags有多少个，切换到标签页的时候mounted就加载几次），解决方案：
<el-tabs v-model=""activeIndex"" type=""border-card"" v-show=""tabs.length"" @tab-click='clickTab' @tab-remove='removeTab'>
    <el-tab-pane v-for=""item in tabs"" :key=""item.name"" :label=""item.name"" :name=""item.route"" :closable=""item.name !=='首页'"">
        <router-view/>
    </el-tab-pane>
</el-tabs>

改为：

<el-tabs v-model=""activeIndex"" type=""border-card"" v-show=""tabs.length"" @tab-click='clickTab' @tab-remove='removeTab'>
    <el-tab-pane v-for=""item in tabs"" :key=""item.name"" :label=""item.name"" :name=""item.route"" :closable=""item.name !=='首页'""></el-tab-pane>
    <router-view/>
</el-tabs>

--- a/SourceCode/BackEnd/pom.xml
+++ b/SourceCode/BackEnd/pom.xml
@@ -60,6 +60,13 @@
             <artifactId>easy-captcha</artifactId>
             <version>1.6.2</version>
         </dependency>
+        <!--糊涂工具包-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.7.22</version>
+        </dependency>
+
         <!--jwt验证-->
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
