--- a/SourceCode/BackEnd/pom.xml
+++ b/SourceCode/BackEnd/pom.xml
@@ -14,7 +14,7 @@
     <name>BackEnd</name>
     <description>BackEnd</description>
     <properties>
-        <java.version>17</java.version>
+        <java.version>1.8</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -47,6 +47,12 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.5.2</version>
         </dependency>
+        <!-- MyBatis-plus-join 链表查询插件 -->
+        <dependency>
+            <groupId>com.github.yulichang</groupId>
+            <artifactId>mybatis-plus-join</artifactId>
+            <version>1.3.8</version>
+        </dependency>
         <!-- 阿里巴巴连接池 -->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -76,6 +82,7 @@
             <artifactId>jjwt</artifactId>
             <version>0.9.1</version>
         </dependency>
+
     </dependencies>
 
     <build>
